--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "scripts": {
         "start": "node server/server.js",
         "dev": "nodemon server/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "npm rebuild bcrypt --build-from-source"
+        "test": "jest --watchAll --detectOpenHandles",
+        "clean-install": "rm -rf node_modules package-lock.json && npm install",
+        "render-postbuild": "npm rebuild",
+        "prepare": "npm run build",
+        "build": "npm install --production && npm prune --production"
     },
     "keywords": [
         "election",
@@ -23,13 +26,21 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "mongoose": "^8.13.2",
-        "vercel": "^41.5.0",
-        "xml2json": "^0.12.0"
+        "xml2js": "^0.6.2"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.2",
+        "supertest": "^6.3.4"
     },
     "engines": {
-        "node": ">=18.x"
+        "node": "18.x",
+        "npm": "9.x"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     }
 }
